<resources>
    <string name="app_name">InventoryApp</string>
    <string name="main_screen_label">Inventory</string>
    <string name="action_delete_all">Delete all</string>
    <string name="price_label">Price:</string>
    <string name="stock_label">Stock:</string>
    <string name="product_title">Product title:</string>
    <string name="product_title_hint"> enter title<elypse>... </elypse></string>
    <string name="brand">Brand:</string>
    <string name="brand_hint">enter brand<elypse>...</elypse></string>
    <string name="price">Sale price ($):</string>
    <string name="price_hint">enter price<elypse>...</elypse></string>
    <string name="stock">In stock:</string>
    <string name="order_form_supplier">Order more from supplier</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="empty">As you can see,\n your shelves are empty<elypse>...</elypse></string>
    <string name="fill">Go ahead and fill them up!</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all entries?</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="delete_failed">An error occurred while trying to delete the item</string>
    <string name="delete_success">Item successfully deleted</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

</resources>
