<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventoryapp.MainActivity">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:footerDividersEnabled="true"
        android:focusable="true"/>

    <RelativeLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/back">


        <TextView
            android:id="@+id/empty_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_centerHorizontal="true"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <ImageView
            android:id="@+id/view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/shelves" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:typeface="serif"
            android:layout_alignTop="@+id/arrow_img"
            android:layout_alignLeft="@+id/view"
            android:layout_alignStart="@+id/view" />

        <ImageView
            android:id="@+id/arrow_img"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/arrow"
            android:layout_marginBottom="71dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/empty_txt"
            android:layout_toEndOf="@+id/empty_txt" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/plus" />

</RelativeLayout>
